--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div routerLink="/map">go to map</div>
-<div routerLink="/">go to route</div>
-<div id="map" style="height: 100vh"></div>
+<div routerLink="/">go to root</div>
+<router-outlet></router-outlet>
+
+
+
 
